--- a/使用说明书.md
+++ b/使用说明书.md
@@ -1,4 +1,4 @@
-# 智能文献检索与综述生成系统 - 使用说明书
+# 医学智能文献检索与综述生成系统 - 使用说明书
 
 ## 目录
 - [项目概述](#项目概述)
@@ -16,7 +16,7 @@
 
 ## 项目概述
 
-智能文献检索与综述生成系统是一个基于AI技术的学术研究辅助工具，专为医学和科研工作者设计。系统能够自动化完成从文献检索到综述生成的全流程，大幅提升研究效率。
+医学智能文献检索与综述生成系统是一个基于AI技术的学术研究辅助工具，专为医学科研工作者设计。系统能够自动化完成从PubMed文献检索到综述生成的全流程，大幅提升研究效率。
 
 ### 核心特色
 - **AI驱动的需求分析**：智能理解用户查询意图，自动生成优化的检索策略
@@ -679,15 +679,3 @@ tail -f logs/system.log
 **A**：可以配置代理服务器，或使用 `--retry` 参数增加重试次数。
 
 ---
-
-## 技术支持
-
-如果遇到其他问题，可以：
-1. 查看详细日志文件
-2. 使用调试模式运行
-3. 检查系统配置文件
-4. 提交问题报告
-
-**版本信息**：v2.0
-**更新日期**：2025年9月
-**维护状态**：积极维护中
